	- requires TiglUsb.dll version 3.6 due to Win98/Me/2k fix
	- added function to detect whether USB support is available
		(suggestion of FTP 83+ <webmaster@ftp83plus.net>).
	- look for the correct module file name on MinGW in ticables_library_init (kevin)
	- added support of PROBE_FIRST in ticables_probing_do
	- fixed strict-aliasing, incompatible pointer type and _FORTIFY_SOURCE warnings (kevin)

- 02/07/2006, version 0.1.2: roms
	- fixed DirectLink issue under Linux (TI84+ only)
	
- 05/06/2006, version 0.1.1: roms
	- renamed stdints.h into stdints1.h
	- fixed ERR_INVALID_ARG in SilverLink (linux) support
	- clean-up & overhaul in the SilverLink (linux) support
	
- 29/05/2006, version 0.1.0: roms
	- reworked USB/PID retrieval to make it independant of handle 
	close/open/probe. Please note that API external behaviour 
	didn't change !
	- added USB PIDs values and support to the API
	- fixed bug in SilverLink/Win32 support: the API was not reentrant 
	=> violation in TiLP after probing
	- improved/extended ticables_probing_do
	- critical bug (>= 2.6.15): call usb_claim_interface before calling
	usb_set_configuration => wrong !
	- added '/dev/bus/usb' probing because '/proc/bus/usb' is being
	deprecated.
	
- 06/05/2006, version 0.0.9: roms
	- added ability to retrieve the USB hand-held connected from its PID
	- improved ticables_probing_do which can probes all cables or 
	  USB cables only (faster).
	- definitely fixed return value for probing functions
	- fixed link_xxx which returns -1 instead of ERR_NOT_OPEN. 
	  Thanks to Tyler Cassidy !

- 17/04/2006, version 0.0.8: roms
	- rewritten data logging system
	- embedded HEX to PKT D-BUS decompiler

- 07/03/2006, version 0.0.7: roms
	- ParallelLink support was not compiled under Windows
	- reset SilverLink cable when opened (like other cables)
	- close/re-open cable in slv_reset. Reseting is not enough on both 
	Linux & Windows.
	- reverted back to previous behaviour (reset instead of close/open)
