@@ -64,7 +64,9 @@ static int par_prepare(CableHandle *h)
 static int par_reset(CableHandle *h);
 static int par_open(CableHandle *h)
 {
-    TRYC(par_io_open(h->device, (int *)&(h->priv)));
+    int fd;
+    TRYC(par_io_open(h->device, &fd));
+    h->priv = (void *)fd;
     TRYC(par_reset(h));
 #ifdef OPEN_DELAYED
 	usleep(2000);	// needs this because serial lines can be low at startup
