@@ -9,6 +9,7 @@ Log:
 	- look for the correct module file name on MinGW in ticables_library_init (kevin)
 	- added support of PROBE_FIRST in ticables_probing_do
 	- fixed strict-aliasing, incompatible pointer type and _FORTIFY_SOURCE warnings (kevin)
+	- fixed endianness dependency in Linux/BSD code and lvalue casts in Win32 code (kevin)
 
 - 02/07/2006, version 0.1.2: roms
 	- fixed DirectLink issue under Linux (TI84+ only)
